# daasiot-android

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/sebyone/daasiot_android/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  daas_jni.cpp  daas_wrapper.cpp  daas_wrapper.hpp  native-lib.cpp
app/src/main/include/: daas.hpp  daas_types.hpp
app/src/main/java/sebyone/daasiot_android/: DaasWrapper.kt  MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
daasiotsdk/: build.gradle.kts
daasiotsdk/src/androidTest/java/sebyone/daasiot_android/: ExampleInstrumentedTest.kt
daasiotsdk/src/main/: AndroidManifest.xml
daasiotsdk/src/main/cpp/: CMakeLists.txt  daas_jni.cpp  daas_wrapper.cpp  daas_wrapper.hpp
daasiotsdk/src/main/include/: daas_types.hpp
daasiotsdk/src/main/java/sebyone/daasiot_android/: DaasWrapper.kt  MainActivity.kt
daasiotsdk/src/main/res/values/: strings.xml
daasiotsdk/src/test/java/sebyone/daasiot_android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
